# script_monitorar_glpi

./: .gitignore  README.md  base_de_conhecimentos.json  chamados_enviados.json  iniciar_monitoramento_glpi.bat  main.py  pyproject.toml
data/: base_de_conhecimentos.json  chamados_enviados.json
src/: app.py  base_de_conhecimento.py  chamados.py  config.py  glpi.py  main.py
src/utils/: email.py  template_email.html
