[project]
name = "glpi-monitor"
version = "0.1.0"
description = ""
authors = [{ name = "@fmota-dev", email = "fmota.web@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "selenium (>=4.32.0,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.31.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
